--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,6 @@
-# Denote all files that are truly binary and should not be modified. 
-
-*.otf binary 
-
-*.eot binary 
-
-*.svg binary 
-
-*.ttf binary 
-
-*.woff binary 
+# Set line endings to always be lf for SVG font files
+* text eol=lf
+*.eot binary
+*.ttf binary
+*.woff binary
+*.woff2 binary
